Fixed mobile layout breaking

--- a/static/urlcheck/style.css
+++ b/static/urlcheck/style.css
@@ -83,5 +83,6 @@ h1 a:visited{
 }
 
 .lineBreak {
+	word-break: break-all;
 	white-space: pre-line;
 }
